Fixed position on mobile

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -44,6 +44,22 @@
     align-items: center;
   }
 
+  &__switcher {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 48px;
+    height: 48px;
+    border: none;
+    background: transparent;
+    border-left: 1px solid var(--header-border-color);
+
+    @include on-desktop {
+      height: 64px;
+      width: 64px;
+    }
+  }
+
   &__menu {
     height: 16px;
 
@@ -86,7 +102,6 @@
     width: 48px;
     border: 0;
     border-left: 1px solid var(--header-border-color);
-    border-bottom: 1px solid var(--header-border-color);
     background-color: var(--background-color);
   
     @include on-desktop {
